force-app/main/default/objects/Bail__c/Bail__c.object-meta.xml
<CustomObject>
    <label>Bail</label>
    <nameField>
        <displayFormat>BAIL-{0000}</displayFormat>
        <label>Numéro de Bail</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Baux</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>