force-app/main/default/objects/Bail__c/fields/Alerte_Fin_Bail_Envoyee__c.field-meta.xml
<CustomField>
    <fullName>Alerte_Fin_Bail_Envoyee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alerte Fin Bail Envoyée</label>
    <type>Checkbox</type>
</CustomField>