force-app/main/default/objects/Bail__c/fields/Date_Debut__c.field-meta.xml
<CustomField>
    <fullName>Date_Debut__c</fullName>
    <description>Date de début du bail</description>
    <label>Date de début</label>
    <required>true</required>
    <type>Date</type>
</CustomField>