force-app/main/default/objects/Bail__c/fields/Date_Derniere_Revision__c.field-meta.xml
<CustomField>
    <fullName>Date_Derniere_Revision__c</fullName>
    <description>Date de la dernière révision du loyer</description>
    <label>Date de dernière révision</label>
    <type>Date</type>
</CustomField>