force-app/main/default/objects/Bail__c/fields/Date_Fin__c.field-meta.xml
<CustomField>
    <fullName>Date_Fin__c</fullName>
    <description>Date de fin du bail</description>
    <label>Date de fin</label>
    <type>Date</type>
</CustomField>