force-app/main/default/objects/Bail__c/fields/Date_Resiliation__c.field-meta.xml
<CustomField>
    <fullName>Date_Resiliation__c</fullName>
    <description>Date de résiliation du bail</description>
    <label>Date de résiliation</label>
    <type>Date</type>
</CustomField>