force-app/main/default/objects/Bail__c/fields/Depot_Garantie__c.field-meta.xml
<CustomField>
    <fullName>Depot_Garantie__c</fullName>
    <description>Montant du dépôt de garantie</description>
    <label>Dépôt de garantie</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>