force-app/main/default/objects/Bail__c/fields/Duree_Preavis__c.field-meta.xml
<CustomField>
    <fullName>Duree_Preavis__c</fullName>
    <defaultValue>3</defaultValue>
    <description>Durée du préavis en mois</description>
    <label>Durée du préavis</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>