force-app/main/default/objects/Bail__c/fields/Fichier_Bail__c.field-meta.xml
<CustomField>
    <fullName>Fichier_Bail__c</fullName>
    <description>Fichier du contrat de bail</description>
    <label>Fichier du bail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>