force-app/main/default/objects/Bail__c/fields/Indexation__c.field-meta.xml
<CustomField>
    <fullName>Indexation__c</fullName>
    <description>Type d'indexation du loyer</description>
    <label>Indexation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IRL</fullName>
                <default>true</default>
                <label>IRL</label>
            </value>
            <value>
                <fullName>ICC</fullName>
            </value>
            <value>
                <fullName>Fixe</fullName>
            </value>
            <value>
                <fullName>Aucune</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>