force-app/main/default/objects/Bail__c/fields/Jour_Paiement__c.field-meta.xml
<CustomField>
    <fullName>Jour_Paiement__c</fullName>
    <defaultValue>5</defaultValue>
    <description>Jour du mois pour le paiement du loyer</description>
    <label>Jour de paiement</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>