force-app/main/default/objects/Bail__c/fields/Locataire__c.field-meta.xml
<CustomField>
    <fullName>Locataire__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Locataire associé au bail</description>
    <label>Locataire</label>
    <referenceTo>Locataire__c</referenceTo>
    <relationshipLabel>Baux</relationshipLabel>
    <relationshipName>Baux</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>