force-app/main/default/objects/Bail__c/fields/Montant_Charges__c.field-meta.xml
<CustomField>
    <fullName>Montant_Charges__c</fullName>
    <description>Montant des charges mensuelles</description>
    <label>Montant des charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>