force-app/main/default/objects/Bail__c/fields/NumeroMandat__c.field-meta.xml
<CustomField>
    <fullName>NumeroMandat__c</fullName>
    <label>Numéro Mandat</label>
    <length>100</length>
    <type>Text</type>
</CustomField>