force-app/main/default/objects/Bail__c/fields/Periodicite_Paiement__c.field-meta.xml
<CustomField>
    <fullName>Periodicite_Paiement__c</fullName>
    <label>Périodicité Paiement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mensuel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>