force-app/main/default/objects/Bail__c/fields/Type_Bail__c.field-meta.xml
<CustomField>
    <fullName>Type_Bail__c</fullName>
    <label>Type Bail</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Habitation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>