force-app/main/default/objects/Bail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Bien_Locatif__c</columns>
    <columns>Locataire__c</columns>
    <columns>Statut__c</columns>
    <columns>Type_Bail__c</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>